2013-09-19  Kirit Saelensminde  <kirit@felspar.com>
 If there's a UTF-7 decode error then just try the user name as passed in the header.

2013-07-11  Kirit Saelensminde  <kirit@felspar.com>
 Assume that the user name in the X-FOST-User header will be UTF-7 encoded.

2013-07-10  Kirit Saelensminde  <kirit@felspar.com>
 Assume that the user name in the Authorization header will be UTF-7 encoded.

2012-05-01  Kirit Saelensminde  <kirit@felspar.com>
 Removed a log that was leaking the secret into the log file.

2012-04-05  Kirit Saelensminde  <kirit@felspar.com>
 Added an especially ugly hack to get around a problem with Django 1.0 and the test client which breaks the raw_post_data.

2012-04-03  Kirit Saelensminde  <kirit@felspar.com>
 When there is a query string the document to be signed needs to include the query string itself (as sent by the browser) as the document.

2012-04-02  Kirit Saelensminde  <kirit@felspar.com>
 Use the key in the Authorization header to look up the user name.
 Allow the timestamp to have an embedded 'T' as per the ISO standard.

2011-10-20  Kirit Saelensminde  <kirit@felspar.com>
 Fixed the setup.py so that it contains the correct Python project name.

2011-08-18  Kirit Saelensminde  <kirit@felspar.com>
 Added a function fost_authn.signature.filter_query_string that can be used to remove the signature query string values from a supplied query string.

2011-05-26  Kirit Saelensminde  <kirit@felspar.com>
 - Added support for signed URLs used for GET and HEAD requests.

2011-05-03  Kirit Saelensminde  <kirit@felspar.com>
 ChangeLog
 - Added ChangeLog